--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.4",
+    "bcrypt": "^5.0.0",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
