--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.10.4",
     "bcrypt": "^5.0.0",
     "meteor-node-stubs": "^0.4.1",
+    "purecss": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
